--- a/data/data/install.openshift.io_installconfigs.yaml
+++ b/data/data/install.openshift.io_installconfigs.yaml
@@ -125,6 +125,10 @@ spec:
                         osDisk:
                           description: OSDisk defines the storage for instance.
                           properties:
+                            diskEncryptionSetId:
+                              description: DiskEncryptionSetID is a resource ID of
+                                disk encryption set
+                              type: string
                             diskSizeGB:
                               description: DiskSizeGB defines the size of disk in
                                 GB.
@@ -483,6 +487,10 @@ spec:
                       osDisk:
                         description: OSDisk defines the storage for instance.
                         properties:
+                          diskEncryptionSetId:
+                            description: DiskEncryptionSetID is a resource ID of disk
+                              encryption set
+                            type: string
                           diskSizeGB:
                             description: DiskSizeGB defines the size of disk in GB.
                             format: int32
@@ -1059,6 +1067,10 @@ spec:
                       osDisk:
                         description: OSDisk defines the storage for instance.
                         properties:
+                          diskEncryptionSetId:
+                            description: DiskEncryptionSetID is a resource ID of disk
+                              encryption set
+                            type: string
                           diskSizeGB:
                             description: DiskSizeGB defines the size of disk in GB.
                             format: int32
